# memwatcher

./: .gitignore  .pypirc  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
examples/: basic_usage.py  decorator_usage.py
memwatcher/: __init__.py  decorators.py  detector.py  exceptions.py  reporter.py  watcher.py
tests/: test_decorators.py  test_detector.py  test_reporter.py  test_watcher.py
